# sololab

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pytest.ini
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_phase3_tables.py  003_phase4_tables.py  004_add_file_hash_column.py  005_writer_documents.py  006_writer_conversation.py  007_drop_task_history.py
backend/src/sololab/: __init__.py  main.py
backend/src/sololab/api/: __init__.py  _deps.py  codelab.py  codelab_browse.py  documents.py  modules.py  providers.py  sessions.py  tasks.py  tools.py  writer.py
backend/src/sololab/benchmark/: __init__.py  ablation.py  cli.py  config.py  judge.py  metrics.py  report.py  runner.py
backend/src/sololab/config/: litellm_config.yaml  settings.py
backend/src/sololab/core/: __init__.py  auth.py  concurrency.py  context_manager.py  cost_tracker.py  document_pipeline.py  llm_gateway.py  memory_manager.py  message_store.py  module_registry.py  observability.py  path_mapper.py  prompt_manager.py  rate_limiter.py  resilience.py  session_manager.py  task_state_manager.py  tool_registry.py
backend/src/sololab/core/llm/: __init__.py  (+5 more)
backend/src/sololab/db/: __init__.py  base.py
backend/src/sololab/models/: __init__.py  agent.py  base.py  document.py  module.py  orm.py  task.py
backend/src/sololab/schemas/: __init__.py  agent.py  module.py
backend/src/sololab/tools/: arxiv_search.py  doc_parse.py  scholar_search.py  tavily_search.py
(+301 files in other folders)
