[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sololab"
version = "0.1.0"
description = "SoloLab - AI-assisted research platform for independent researchers"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "huangsuxiang", email = "huangsuxiang5@gmail.com" }]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.30.0",
    "redis[hiredis]>=5.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.0",
    "pgvector>=0.2.5",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.9",
    "structlog>=24.1.0",
    "pyyaml>=6.0.1",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "fakeredis[lua]>=2.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sololab"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
